# streamer

./: .dockerignore  Cargo.toml  Dockerfile  build.rs  config.yml  docker-compose.yml
assets/: index.html
control_plane/: Cargo.toml  build.rs
control_plane/assets/: index.html
control_plane/proto/: api.proto  grpc_api.proto  ws_api.proto
control_plane/src/: config.rs  config_store.rs  grpc.rs  lib.rs  web.rs
data_plane/: Cargo.toml
data_plane/src/: lib.rs  processor.rs  rx.rs  tx.rs
doc/: grpc_api.md
proto/: api.proto
src/: config.rs  main.rs  metrics.rs
tests/: integration_test.rs  rtp_tester.rs
tests/common/: mod.rs
