[workspace]
members = [
    "control_plane",
    "data_plane",
]

[package]
name = "streamer"
version = "0.1.0"
edition = "2024"

[dependencies]
control_plane = { path = "./control_plane" }
data_plane = { path = "./data_plane" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
metrics = "0.24"
metrics-exporter-prometheus = "0.18.1"

[dev-dependencies]
bytes = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tonic = { version = "0.13" }
rtp = "0.17.1"
webrtc-util = "0.17.1"