[package]
name = "control_plane"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.13"      # gRPC runtime
tonic-reflection = "0.13" # Matches your tonic version
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
thiserror = "2"
data_plane = { path = "../data_plane" }

[build-dependencies]
tonic-build = "0.13" # Code generator for gRPC