[package]
name = "control_plane"
version = "0.1.0"
edition = "2024"

[dependencies]
data_plane = { path = "../data_plane" }
tonic = "0.13"      # gRPC runtime
tonic-reflection = "0.13" # Matches your tonic version
axum = { version = "0.8.8", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "full"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
# protobuff and serialization
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.13" # Code generator for gRPC